--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "1.0.0",
   "description": "A.N.D.?",
   "main": "index.js",
+  "engines": {
+    "node": "8.x",
+    "npm": "*"
+  
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -13,5 +18,8 @@
     "common-tags": "^1.8.0",
     "dotenv": "^8.2.0",
     "fs": "0.0.1-security"
+    
+  
   }
+
 }
