--- a/package.json
+++ b/package.json
@@ -3,11 +3,6 @@
   "version": "1.0.0",
   "description": "A.N.D.?",
   "main": "index.js",
-  "engines": {
-    "node": "8.x",
-    "npm": "*"
-  
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -16,10 +11,12 @@
   "dependencies": {
     "ascii-table": "0.0.9",
     "common-tags": "^1.8.0",
+    "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "fs": "0.0.1-security"
-    
-  
-  }
-
+  },
+  "devDependencies": {},
+  "keywords": []
 }
+
