--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "discord.js": "^12.1.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "snekfetch": "^4.0.4"
   },
   "devDependencies": {},
   "keywords": []
